Validation and Anchor Tag
Fixed validations errors and made the anchor tags scroll properly.

--- a/constitution/index.html
+++ b/constitution/index.html
@@ -63,7 +63,7 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">Amendments</a>
-                            <ul id="navbarDropdown" class="dropdown-menu">
+                            <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="#amendment-1">First</a></li>
                                 <li><a class="dropdown-item" href="#amendment-2">Second</a></li>
                                 <li><a class="dropdown-item" href="#amendment-3">Third</a></li>
@@ -82,7 +82,7 @@
         </nav>
     </header>
     <!--Article I section-->
-    <section id="article-i" class="container-md sec-vert-format">
+    <section id="article-i" class="container-md sec-vert-format anchor-spacing">
         <h2 class="CD-title-2">Article I</h2>
         <div class="accordion accordion-flush accordion-spacing" id="article-i-accordion">
             <div class="accordion-item">
@@ -530,8 +530,8 @@
                         Article V Explained
                     </button>
                 </h2>
-                <div id="article-v-a-collapse" class="accordion-collapse collapse"
-                    aria-labelledby="article-v-a-heading" data-bs-parent="#article-v-accordion">
+                <div id="article-v-a-collapse" class="accordion-collapse collapse" aria-labelledby="article-v-a-heading"
+                    data-bs-parent="#article-v-accordion">
                     <div class="accordion-body">
                         <p class="CD-body">
                             There will be a Congress with a Senate and a House of Representation.
@@ -562,8 +562,8 @@
                         Article VI Explained
                     </button>
                 </h2>
-                <div id="article-vi-a-collapse" class="accordion-collapse collapse" aria-labelledby="article-vi-a-heading"
-                    data-bs-parent="#article-vi-accordion">
+                <div id="article-vi-a-collapse" class="accordion-collapse collapse"
+                    aria-labelledby="article-vi-a-heading" data-bs-parent="#article-vi-accordion">
                     <div class="accordion-body">
                         <p class="CD-body">
                             There will be a Congress with a Senate and a House of Representation.
@@ -621,8 +621,8 @@
                         First Amendment Explained
                     </button>
                 </h2>
-                <div id="amendment-1-a-collapse" class="accordion-collapse collapse" aria-labelledby="amendment-1-a-heading"
-                    data-bs-parent="#amendment-1-accordion">
+                <div id="amendment-1-a-collapse" class="accordion-collapse collapse"
+                    aria-labelledby="amendment-1-a-heading" data-bs-parent="#amendment-1-accordion">
                     <div class="accordion-body">
                         <p class="CD-body">
                             There will be a Congress with a Senate and a House of Representation.
@@ -647,8 +647,8 @@
                         Second Amendment Explained
                     </button>
                 </h2>
-                <div id="amendment-2-a-collapse" class="accordion-collapse collapse" aria-labelledby="amendment-2-a-heading"
-                    data-bs-parent="#amendment-2-accordion">
+                <div id="amendment-2-a-collapse" class="accordion-collapse collapse"
+                    aria-labelledby="amendment-2-a-heading" data-bs-parent="#amendment-2-accordion">
                     <div class="accordion-body">
                         <p class="CD-body">
                             There will be a Congress with a Senate and a House of Representation.
@@ -671,8 +671,8 @@
                         Third Amendment Explained
                     </button>
                 </h2>
-                <div id="amendment-3-a-collapse" class="accordion-collapse collapse" aria-labelledby="amendment-3-a-heading"
-                    data-bs-parent="#amendment-3-accordion">
+                <div id="amendment-3-a-collapse" class="accordion-collapse collapse"
+                    aria-labelledby="amendment-3-a-heading" data-bs-parent="#amendment-3-accordion">
                     <div class="accordion-body">
                         <p class="CD-body">
                             There will be a Congress with a Senate and a House of Representation.
@@ -696,8 +696,8 @@
                         Fourth Amendment Explained
                     </button>
                 </h2>
-                <div id="amendment-4-a-collapse" class="accordion-collapse collapse" aria-labelledby="amendment-4-a-heading"
-                    data-bs-parent="#amendment-4-accordion">
+                <div id="amendment-4-a-collapse" class="accordion-collapse collapse"
+                    aria-labelledby="amendment-4-a-heading" data-bs-parent="#amendment-4-accordion">
                     <div class="accordion-body">
                         <p class="CD-body">
                             There will be a Congress with a Senate and a House of Representation.
@@ -723,8 +723,8 @@
                         Fifth Amendment Explained
                     </button>
                 </h2>
-                <div id="amendment-5-a-collapse" class="accordion-collapse collapse" aria-labelledby="amendment-5-a-heading"
-                    data-bs-parent="#amendment-5-accordion">
+                <div id="amendment-5-a-collapse" class="accordion-collapse collapse"
+                    aria-labelledby="amendment-5-a-heading" data-bs-parent="#amendment-5-accordion">
                     <div class="accordion-body">
                         <p class="CD-body">
                             There will be a Congress with a Senate and a House of Representation.
@@ -754,8 +754,8 @@
                         Sixth Amendment Explained
                     </button>
                 </h2>
-                <div id="amendment-6-a-collapse" class="accordion-collapse collapse" aria-labelledby="amendment-6-a-heading"
-                    data-bs-parent="#amendment-6-accordion">
+                <div id="amendment-6-a-collapse" class="accordion-collapse collapse"
+                    aria-labelledby="amendment-6-a-heading" data-bs-parent="#amendment-6-accordion">
                     <div class="accordion-body">
                         <p class="CD-body">
                             There will be a Congress with a Senate and a House of Representation.
@@ -784,8 +784,8 @@
                         Seventh Amendment Explained
                     </button>
                 </h2>
-                <div id="amendment-7-a-collapse" class="accordion-collapse collapse" aria-labelledby="amendment-7-a-heading"
-                    data-bs-parent="#amendment-7-accordion">
+                <div id="amendment-7-a-collapse" class="accordion-collapse collapse"
+                    aria-labelledby="amendment-7-a-heading" data-bs-parent="#amendment-7-accordion">
                     <div class="accordion-body">
                         <p class="CD-body">
                             There will be a Congress with a Senate and a House of Representation.
@@ -811,8 +811,8 @@
                         Eighth Amendment Explained
                     </button>
                 </h2>
-                <div id="amendment-8-a-collapse" class="accordion-collapse collapse" aria-labelledby="amendment-8-a-heading"
-                    data-bs-parent="#amendment-8-accordion">
+                <div id="amendment-8-a-collapse" class="accordion-collapse collapse"
+                    aria-labelledby="amendment-8-a-heading" data-bs-parent="#amendment-8-accordion">
                     <div class="accordion-body">
                         <p class="CD-body">
                             There will be a Congress with a Senate and a House of Representation.
@@ -832,11 +832,11 @@
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#amendment-9-a-collapse" aria-expanded="false"
                         aria-controls="amendment-9-a-collapse">
-                       Ninth Amendment Explained
+                        Ninth Amendment Explained
                     </button>
                 </h2>
-                <div id="amendment-9-a-collapse" class="accordion-collapse collapse" aria-labelledby="amendment-9-a-heading"
-                    data-bs-parent="#amendment-9-accordion">
+                <div id="amendment-9-a-collapse" class="accordion-collapse collapse"
+                    aria-labelledby="amendment-9-a-heading" data-bs-parent="#amendment-9-accordion">
                     <div class="accordion-body">
                         <p class="CD-body">
                             There will be a Congress with a Senate and a House of Representation.
@@ -859,8 +859,8 @@
                         Tenth Amendment Explained
                     </button>
                 </h2>
-                <div id="amendment-10-a-collapse" class="accordion-collapse collapse" aria-labelledby="amendment-10-a-heading"
-                    data-bs-parent="#amendment-10-accordion">
+                <div id="amendment-10-a-collapse" class="accordion-collapse collapse"
+                    aria-labelledby="amendment-10-a-heading" data-bs-parent="#amendment-10-accordion">
                     <div class="accordion-body">
                         <p class="CD-body">
                             There will be a Congress with a Senate and a House of Representation.
@@ -873,11 +873,13 @@
             the
             States, are reserved to the States respectively, or to the people.</p>
     </section>
-
+    <footer class="p-3">
+        <p class="CD-body"><a class="footer-link" href="#article-i">Back to top</a></p>
+    </footer>
+    <!-- Bootstrap JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+        crossorigin="anonymous"></script>
 </body>
-<!-- Bootstrap JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
-    crossorigin="anonymous"></script>
 
 </html>
