--- a/constitution/index.html
+++ b/constitution/index.html
@@ -24,12 +24,13 @@
         <h1 class="CD-title"><span class="blue-text">The United</span> States Constitution</h1>
         <nav class="navbar navbar-dark navbar-expand-lg">
             <div class="container-md">
+                <!--Creating Navbar toggler for small screens-->
                 <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#CD-navbar" aria-controls="CD-navbar" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <span id="nav-icon" class="navbar-toggler-icon"></span>
                 </button>
-
+                <!--Nav bar items-->
                 <div id="CD-navbar" class="collapse navbar-collapse">
                     <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                         <li class="nav-item">
@@ -59,7 +60,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#article-vii">Article VII</a>
                         </li>
-
+                        <!--Drop Down menu for amendments-->
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">Amendments</a>
@@ -84,6 +85,7 @@
     <!--Article I section-->
     <section id="article-i" class="container-md sec-vert-format anchor-spacing">
         <h2 class="CD-title-2">Article I</h2>
+        <!-- Accordion for explanation -->
         <div class="accordion accordion-flush accordion-spacing" id="article-i-accordion">
             <div class="accordion-item">
                 <h2 class="accordion-header" id="article-i-a-heading">
@@ -320,6 +322,7 @@
     <!--Article II section-->
     <section id="article-ii" class="container-md sec-vert-format">
         <h2 class="CD-title-2">Article II</h2>
+        <!-- Accordion for explanation -->
         <div class="accordion accordion-flush accordion-spacing" id="article-ii-accordion">
             <div class="accordion-item">
                 <h2 class="accordion-header" id="article-ii-a-heading">
@@ -418,6 +421,7 @@
     <!--Article III section-->
     <section id="article-iii" class="container-md sec-vert-format">
         <h2 class="CD-title-2">Article III</h2>
+        <!-- Accordion for explanation -->
         <div class="accordion accordion-flush accordion-spacing" id="article-iii-accordion">
             <div class="accordion-item">
                 <h2 class="accordion-header" id="article-iii-a-heading">
@@ -470,6 +474,7 @@
     <!--Article IV section-->
     <section id="article-iv" class="container-md sec-vert-format">
         <h2 class="CD-title-2">Article IV</h2>
+        <!-- Accordion for explanation -->
         <div class="accordion accordion-flush accordion-spacing" id="article-iv-accordion">
             <div class="accordion-item">
                 <h2 class="accordion-header" id="article-iv-a-heading">
@@ -521,6 +526,7 @@
     <!--Article V section-->
     <section id="article-v" class="container-md sec-vert-format">
         <h2 class="CD-title-2">Article V</h2>
+        <!-- Accordion for explanation -->
         <div class="accordion accordion-flush accordion-spacing" id="article-v-accordion">
             <div class="accordion-item">
                 <h2 class="accordion-header" id="article-v-a-heading">
@@ -553,6 +559,7 @@
     <!--Article VI section-->
     <section id="article-vi" class="container-md sec-vert-format">
         <h2 class="CD-title-2">Article VI</h2>
+        <!-- Accordion for explanation -->
         <div class="accordion accordion-flush accordion-spacing" id="article-vi-accordion">
             <div class="accordion-item">
                 <h2 class="accordion-header" id="article-vi-a-heading">
@@ -588,6 +595,7 @@
     <!--Article VII section-->
     <section id="article-vii" class="container-md sec-vert-format">
         <h2 class="CD-title-2">Article VII</h2>
+        <!-- Accordion for explanation -->
         <div class="accordion accordion-flush accordion-spacing" id="article-vii-accordion">
             <div class="accordion-item">
                 <h2 class="accordion-header" id="article-vii-a-heading">
@@ -610,8 +618,10 @@
         <p class="CD-body">The Ratification of the Conventions of nine States, shall be sufficient for the Establishment
             of this Constitution between the States so ratifying the Same.</p>
     </section>
+    <!-- First Amendment Section -->
     <section id="amendment-1" class="container-md sec-vert-format">
         <h2 class="CD-title-2">First Amendment</h2>
+        <!-- Accordion for explanation -->
         <div class="accordion accordion-flush accordion-spacing" id="amendment-1-accordion">
             <div class="accordion-item">
                 <h2 class="accordion-header" id="amendment-1-a-heading">
@@ -636,8 +646,10 @@
             to
             assemble, and to petition the Government for a redress of grievances.</p>
     </section>
+    <!-- Second amendment section -->
     <section id="amendment-2" class="container-md sec-vert-format">
         <h2 class="CD-title-2">Second Amendment</h2>
+        <!-- Accordion for explanation -->
         <div class="accordion accordion-flush accordion-spacing" id="amendment-2-accordion">
             <div class="accordion-item">
                 <h2 class="accordion-header" id="amendment-2-a-heading">
@@ -660,8 +672,10 @@
         <p class="CD-body">A well regulated Militia, being necessary to the security of a free State, the right of the
             people to keep and bear Arms, shall not be infringed.</p>
     </section>
+    <!-- Third amendment section -->
     <section id="amendment-3" class="container-md sec-vert-format">
         <h2 class="CD-title-2">Third Amendment</h2>
+        <!-- Accordion for explanation -->
         <div class="accordion accordion-flush accordion-spacing" id="amendment-3-accordion">
             <div class="accordion-item">
                 <h2 class="accordion-header" id="amendment-3-a-heading">
@@ -685,8 +699,10 @@
             Owner,
             nor in time of war, but in a manner to be prescribed by law.</p>
     </section>
+    <!-- Fourth amendment section -->
     <section id="amendment-4" class="container-md sec-vert-format">
         <h2 class="CD-title-2">Fourth Amendment</h2>
+        <!-- Accordion for explanation -->
         <div class="accordion accordion-flush accordion-spacing" id="amendment-4-accordion">
             <div class="accordion-item">
                 <h2 class="accordion-header" id="amendment-4-a-heading">
@@ -712,8 +728,10 @@
             supported by Oath or affirmation, and particularly describing the place to be searched, and the persons or
             things to be seized.</p>
     </section>
+    <!-- Fifth amendment section -->
     <section id="amendment-5" class="container-md sec-vert-format">
         <h2 class="CD-title-2">Fifth Amendment</h2>
+        <!-- Accordion for explanation -->
         <div class="accordion accordion-flush accordion-spacing" id="amendment-5-accordion">
             <div class="accordion-item">
                 <h2 class="accordion-header" id="amendment-5-a-heading">
@@ -743,8 +761,10 @@
             private
             property be taken for public use, without just compensation.</p>
     </section>
+    <!-- Sixth Amendment Section -->
     <section id="amendment-6" class="container-md sec-vert-format">
         <h2 class="CD-title-2">Sixth Amendment</h2>
+        <!-- Accordion for explanation -->
         <div class="accordion accordion-flush accordion-spacing" id="amendment-6-accordion">
             <div class="accordion-item">
                 <h2 class="accordion-header" id="amendment-6-a-heading">
@@ -773,8 +793,10 @@
             and
             to have the Assistance of Counsel for his defence.</p>
     </section>
+    <!-- Seventh Amendment Section -->
     <section id="amendment-7" class="container-md sec-vert-format">
         <h2 class="CD-title-2">Seventh Amendment</h2>
+        <!-- Accordion for explanation -->
         <div class="accordion accordion-flush accordion-spacing" id="amendment-7-accordion">
             <div class="accordion-item">
                 <h2 class="accordion-header" id="amendment-7-a-heading">
@@ -800,8 +822,10 @@
             of
             the United States, than according to the rules of the common law.</p>
     </section>
+    <!-- Eigth Amendment Section -->
     <section id="amendment-8" class="container-md sec-vert-format">
         <h2 class="CD-title-2">Eigth Amendment</h2>
+        <!-- Accordion for explanation -->
         <div class="accordion accordion-flush accordion-spacing" id="amendment-8-accordion">
             <div class="accordion-item">
                 <h2 class="accordion-header" id="amendment-8-a-heading">
@@ -824,8 +848,10 @@
         <p class="CD-body">Excessive bail shall not be required, nor excessive fines imposed, nor cruel and unusual
             punishments inflicted.</p>
     </section>
+    <!-- Ninth Amendment Section -->
     <section id="amendment-9" class="container-md sec-vert-format">
         <h2 class="CD-title-2">Ninth Amendment</h2>
+        <!-- Accordion for explanation -->
         <div class="accordion accordion-flush accordion-spacing" id="amendment-9-accordion">
             <div class="accordion-item">
                 <h2 class="accordion-header" id="amendment-9-a-heading">
@@ -848,8 +874,10 @@
         <p class="CD-body">The enumeration in the Constitution, of certain rights, shall not be construed to deny or
             disparage others retained by the people.</p>
     </section>
+    <!-- Tenth Amendment Section -->
     <section id="amendment-10" class="container-md sec-vert-format">
         <h2 class="CD-title-2">Tenth Amendment</h2>
+        <!-- Accordion for explanation -->
         <div class="accordion accordion-flush accordion-spacing" id="amendment-10-accordion">
             <div class="accordion-item">
                 <h2 class="accordion-header" id="amendment-10-a-heading">
@@ -873,6 +901,7 @@
             the
             States, are reserved to the States respectively, or to the people.</p>
     </section>
+    <!-- Website Footer -->
     <footer class="p-3">
         <p class="CD-body"><a class="footer-link" href="#article-i">Back to top</a></p>
     </footer>
