Updated Amendment Descriptions

--- a/constitution/index.html
+++ b/constitution/index.html
@@ -853,7 +853,12 @@
             <div class="accordion-body">
               <p class="CD-body">
                 Government upholds freedom of religion, speech, press, assembly,
-                and petition.
+                and petition. This means that any person can practice whatever
+                religion they choose, be able to speak their mind, report on
+                news as they see fit, and assemble for many reasons, such as to
+                protest. These are core beliefs to the United States - we pride
+                ourselves on letting our citizens do what makes them happy, so
+                long as its not hurting others.
               </p>
             </div>
           </div>
@@ -895,7 +900,11 @@
           >
             <div class="accordion-body">
               <p class="CD-body">
-                Government supports the right to bear arms and weaponry.
+                This amendment is one that is in high debate right now - it
+                gives citizens the right to own guns and other firearms. The
+                idea for this when it was implemented was that the people could
+                act as their own military force against the government if the
+                government starts to be too invasive and unfair to the People.
               </p>
             </div>
           </div>
@@ -938,6 +947,10 @@
               <p class="CD-body">
                 Quartering, which is the act of soliders being able to live in
                 citizen's homes, is not allowed in times of war or otherwise.
+                This was something that used to happen, and was unfair to those
+                who didn't have the means to support another person. This gives
+                more power to the people, and makes it so that the military is
+                not "above" anybody else.
               </p>
             </div>
           </div>
@@ -979,7 +992,10 @@
             <div class="accordion-body">
               <p class="CD-body">
                 The People of the United States are protected from unwarranted
-                searches or seizures from the Government.
+                searches or seizures from the Government. This makes it so that
+                the Government has to be fair to all, even criminals, as
+                criminals are human too. It protects people from punishment that
+                is too harsh.
               </p>
             </div>
           </div>
@@ -1026,7 +1042,8 @@
                 self-incriminate. This is where the popular saying "I plead the
                 fifth" comes from, when being interrogated by police or others.
                 It also protects against double-jeopardy, where you can be
-                charged twice with the same thing.
+                charged twice with the same thing. This is very important,
+                especially in criminal court, as you can imagine.
               </p>
             </div>
           </div>
@@ -1075,7 +1092,12 @@
               <p class="CD-body">
                 This guarantees defendants the right to have an attorney at
                 their trial. If the defendants does not have the money to get a
-                lawyer, it will be provided by the government body.
+                lawyer, it will be provided by the government body. This is,
+                again, another way for the government to ensure fairness for
+                all, even those being criminally charged. This upholds the
+                American value of "innocent until proven guilty" as it gives all
+                people the opportunity to defend themselves in court against
+                their charges.
               </p>
             </div>
           </div>
@@ -1120,9 +1142,13 @@
           >
             <div class="accordion-body">
               <p class="CD-body">
-                This amendment guarantees the right to a trial by jury, so that
-                more people have a say in the decision and it is more fair in
-                the end.
+                A jury is a group of people sworn in to be a fair crowd during a
+                trial, and they are given the power to help decide the fate of
+                the person being charged. This amendment guarantees the right to
+                a trial by jury, so that more people have a say in the decision
+                and the courtroom is more fair, rather than having a bunch of
+                random people who may agree with one party make all the
+                decisions.
               </p>
             </div>
           </div>
@@ -1165,7 +1191,12 @@
             <div class="accordion-body">
               <p class="CD-body">
                 The eighth amendment protects people against unreasonably high
-                bail amounts, fines, and cruel and/or unusual punishments.
+                bail amounts, fines, and cruel and/or unusual punishments. This
+                could be something as crazy as 10 years of jail time for a
+                speeding ticket! This amendment makes it so that, again, even
+                criminals are being treated fairly, and get only the punishment
+                they actually deserve, not something that will needlessly ruin
+                their lives.
               </p>
             </div>
           </div>
@@ -1208,7 +1239,10 @@
                 This amendment basically opens up the pathway for "inferred"
                 rights, saying that the rights not specifically outlined in the
                 Constituiton are not to be solely distributed by the Government.
-                Rather, the people own them until stated otherwise.
+                Rather, the people own them until stated otherwise. This is very
+                important, as otherwise, the Government could have control over
+                anything not stated in writing - like banning your right to eat
+                cereal in the morning!
               </p>
             </div>
           </div>
@@ -1250,7 +1284,8 @@
               <p class="CD-body">
                 This amendment is also used to protect the writes of those not
                 explicitly given. It states that powers not explicitly given
-                belong to either the people or the states.
+                belong to either the people or the states. It goes hand-in-hand
+                with the ninth amendment, extending powers to the states.
               </p>
             </div>
           </div>
