Added explanations of Articles 3-7

--- a/constitution/index.html
+++ b/constitution/index.html
@@ -5,7 +5,7 @@
     <!--meta tags-->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, intial-scale=1" />
-    <meta name="description" content="U.S. Constituiton Articles I-VII and Amendments 1-10." />
+    <meta name="description" content="U.S. Constitution Articles I-VII and Amendments 1-10." />
     <!--CSS and Fonts-->
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -435,41 +435,59 @@
                     aria-labelledby="article-iii-a-heading" data-bs-parent="#article-iii-accordion">
                     <div class="accordion-body">
                         <p class="CD-body">
-                            There will be a Congress with a Senate and a House of Representation.
+                            Section one lays out the Supreme Court as the most powerful court and gives it the final say
+                            on cases. It also gives people who serve on the supreme court life long appointments.
+                        </p>
+                        <p class="CD-body">
+                            Section two gives federal courts the power to decide how to interpret the constitution and
+                            all legal matters in and having to do with the United States.
+                        </p>
+                        <p class="CD-body">
+                            Section three defines what treason is in the United States.
                         </p>
                     </div>
                 </div>
             </div>
-        </div>
-        <h3 class="CD-head">Section 1</h3>
-        <p class="CD-body">The judicial Power of the United States, shall be vested in one supreme Court, and in such
-            inferior Courts as the Congress may from time to time ordain and establish. The Judges, both of the supreme
-            and inferior Courts, shall hold their Offices during good Behaviour, and shall, at stated Times, receive for
-            their Services, a Compensation, which shall not be diminished during their Continuance in Office.</p>
-        <h3 class="CD-head">Section 2</h3>
-        <p class="CD-body">The judicial Power shall extend to all Cases, in Law and Equity, arising under this
-            Constitution, the Laws of the United States, and Treaties made, or which shall be made, under their
-            Authority;—to all Cases affecting Ambassadors, other public Ministers and Consuls;—to all Cases of admiralty
-            and maritime Jurisdiction;—to Controversies to which the United States shall be a Party;—to Controversies
-            between two or more States;—between a State and Citizens of another State,—between Citizens of different
-            States,—between Citizens of the same State claiming Lands under Grants of different States, and between a
-            State, or the Citizens thereof, and foreign States, Citizens or Subjects.
+            <h3 class="CD-head">Section 1</h3>
+            <p class="CD-body">The judicial Power of the United States, shall be vested in one supreme Court, and in
+                such
+                inferior Courts as the Congress may from time to time ordain and establish. The Judges, both of the
+                supreme
+                and inferior Courts, shall hold their Offices during good Behaviour, and shall, at stated Times, receive
+                for
+                their Services, a Compensation, which shall not be diminished during their Continuance in Office.</p>
+            <h3 class="CD-head">Section 2</h3>
+            <p class="CD-body">The judicial Power shall extend to all Cases, in Law and Equity, arising under this
+                Constitution, the Laws of the United States, and Treaties made, or which shall be made, under their
+                Authority;—to all Cases affecting Ambassadors, other public Ministers and Consuls;—to all Cases of
+                admiralty
+                and maritime Jurisdiction;—to Controversies to which the United States shall be a Party;—to
+                Controversies
+                between two or more States;—between a State and Citizens of another State,—between Citizens of different
+                States,—between Citizens of the same State claiming Lands under Grants of different States, and between
+                a
+                State, or the Citizens thereof, and foreign States, Citizens or Subjects.
 
-            In all Cases affecting Ambassadors, other public Ministers and Consuls, and those in which a State shall be
-            Party, the supreme Court shall have original Jurisdiction. In all the other Cases before mentioned, the
-            supreme Court shall have appellate Jurisdiction, both as to Law and Fact, with such Exceptions, and under
-            such Regulations as the Congress shall make.
+                In all Cases affecting Ambassadors, other public Ministers and Consuls, and those in which a State shall
+                be
+                Party, the supreme Court shall have original Jurisdiction. In all the other Cases before mentioned, the
+                supreme Court shall have appellate Jurisdiction, both as to Law and Fact, with such Exceptions, and
+                under
+                such Regulations as the Congress shall make.
 
-            The Trial of all Crimes, except in Cases of Impeachment, shall be by Jury; and such Trial shall be held in
-            the State where the said Crimes shall have been committed; but when not committed within any State, the
-            Trial shall be at such Place or Places as the Congress may by Law have directed.</p>
-        <h3 class="CD-head">Section 3</h3>
-        <p class="CD-body">Treason against the United States, shall consist only in levying War against them, or in
-            adhering to their Enemies, giving them Aid and Comfort. No Person shall be convicted of Treason unless on
-            the Testimony of two Witnesses to the same overt Act, or on Confession in open Court.
+                The Trial of all Crimes, except in Cases of Impeachment, shall be by Jury; and such Trial shall be held
+                in
+                the State where the said Crimes shall have been committed; but when not committed within any State, the
+                Trial shall be at such Place or Places as the Congress may by Law have directed.</p>
+            <h3 class="CD-head">Section 3</h3>
+            <p class="CD-body">Treason against the United States, shall consist only in levying War against them, or in
+                adhering to their Enemies, giving them Aid and Comfort. No Person shall be convicted of Treason unless
+                on
+                the Testimony of two Witnesses to the same overt Act, or on Confession in open Court.
 
-            The Congress shall have Power to declare the Punishment of Treason, but no Attainder of Treason shall work
-            Corruption of Blood, or Forfeiture except during the Life of the Person attainted.</p>
+                The Congress shall have Power to declare the Punishment of Treason, but no Attainder of Treason shall
+                work
+                Corruption of Blood, or Forfeiture except during the Life of the Person attainted.</p>
     </section>
     <!--Article IV section-->
     <section id="article-iv" class="container-md sec-vert-format">
@@ -488,7 +506,24 @@
                     aria-labelledby="article-iv-a-heading" data-bs-parent="#article-iv-accordion">
                     <div class="accordion-body">
                         <p class="CD-body">
-                            There will be a Congress with a Senate and a House of Representation.
+                            Section one establishes that states must observe each others laws and court orders and
+                            regonize them as if they were there own. The end of section one gives congress powers to
+                            determine the extent of how states will regonize and enforce eachothers laws.
+                        </p>
+                        <p class="CD-body">
+                            Section two says that states must give all citizens of the united states the same rights
+                            regardless of which state they are from. It also mentions if someone commits a crime and
+                            they go to another state they must be returned to the state they committed the crime in.
+                        </p>
+                        <p class="CD-body">
+                            Section three allows congress to allow new states to join the union and gives these states
+                            equal rights. It also mentions that not all lands owned by the United States are states. The
+                            lands that are not states are called territories and are controlled by the federal
+                            government.
+                        </p>
+                        <p class="CD-body">
+                            Section four says each state should be ran like a representative democracy. It also gives
+                            congress power to give federal help to states that have are being attacked.
                         </p>
                     </div>
                 </div>
@@ -540,7 +575,12 @@
                     data-bs-parent="#article-v-accordion">
                     <div class="accordion-body">
                         <p class="CD-body">
-                            There will be a Congress with a Senate and a House of Representation.
+                            Article five of the constitution lays out how to change the constitution. There are two main
+                            steps to amending the constitution the first is to get 2/3 of congress agree to propose an
+                            amendment. The second is to get 3/4 of congress to agree to the amendment being added to the
+                            constitution.
+                            The final part of article five protects some parts of the constitution from being changed
+                            until 1808 and made one section of article one permanent.
                         </p>
                     </div>
                 </div>
@@ -573,7 +613,10 @@
                     aria-labelledby="article-vi-a-heading" data-bs-parent="#article-vi-accordion">
                     <div class="accordion-body">
                         <p class="CD-body">
-                            There will be a Congress with a Senate and a House of Representation.
+                            Article six of the constitution established that any debts or agreements that the United
+                            States had before ratifying the constitution are still valid. The article continues by
+                            establishing the constitution as the highest form of law and says all legislators, officers,
+                            and judges have to uphold the constitution.
                         </p>
                     </div>
                 </div>
@@ -609,7 +652,8 @@
                     aria-labelledby="article-vii-a-heading" data-bs-parent="#article-vii-accordion">
                     <div class="accordion-body">
                         <p class="CD-body">
-                            There will be a Congress with a Senate and a House of Representation.
+                            The seventh and final article is talking about the minimum number of states that were
+                            required to agree for the constitution to be established as the new frame of government.
                         </p>
                     </div>
                 </div>
@@ -891,7 +935,6 @@
                     aria-labelledby="amendment-10-a-heading" data-bs-parent="#amendment-10-accordion">
                     <div class="accordion-body">
                         <p class="CD-body">
-                            There will be a Congress with a Senate and a House of Representation.
                         </p>
                     </div>
                 </div>
