--- a/Final/index.html
+++ b/Final/index.html
@@ -9,7 +9,11 @@
     <!-- Latest compiled and minified bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.0/font/bootstrap-icons.css">
     <!--Fonts and CSS-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter&family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <!-- Bootstrap JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
@@ -21,9 +25,49 @@
 
 <body>
     <!-- Site Header -->
-    <header>
+    <header class="container-xxl">
         <!-- Site Nav Bar -->
-        <nav>
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <!-- Site logo -->
+            <a href="index.html" class="navbar-brand"><img class="RL-Logo" src="resources/Rensselear-List-Logo.png"
+                    alt="Rensselaer List Logo"></a>
+            <!-- Nav button for mobile  -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#RL-Navbar"
+                aria-controls="RL-Navbar"><span class="navbar-toggler-icon"></span></button>
+            <!-- Off Canvas Nav -->
+            <div class="offcanvas offcanvas-end" tabindex="-1" id="RL-Navbar">
+                <div class="offcanvas-header">
+                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                    <ul class="navbar-nav flex-fill justify-content-between pt-2">
+                        <li class="nav-item dropdown nav-x-padding">
+                            <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">Browse</a>
+                            <ul class="dropdown-menu">
+                                <li><a href="" class="dropdown-item">All</a></li>
+                                <li><a href="" class="dropdown-item">New Items</a></li>
+                                <li><a href="" class="dropdown-item">By Category</a></li>
+                                <li><a href="" class="dropdown-item">Top Listings</a></li>
+                            </ul>
+                        </li>
+                        <form class="d-flex ms-lg-auto" role="search">
+                            <button class="btn btn-primary mx-1" type="submit"><i class="bi bi-search"></i></button>
+                            <input class="search-bar me-5" type="search" placeholder="Search" aria-label="Search">
+                        </form>
+                        <li class="nav-item ms-lg-auto">
+                            <a class="nav-link" href="#">Sign Up</a>
+                        </li>
+                        <li class="nav-item pe-2 nav-x-padding">
+                            <a class="nav-link" href="#">Log In</a>
+                        </li>
+                        <li class="nav-item black-line"></li>
+                        <li class="nav-item nav-x-padding">
+                            <a class="btn btn-primary nav-btn" href="#" role="button">Sell</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
 
