--- a/Final/index.html
+++ b/Final/index.html
@@ -43,7 +43,7 @@
         <div class="offcanvas-body">
           <ul class="navbar-nav flex-fill justify-content-between pt-2">
             <li class="nav-item dropdown nav-x-padding">
-              <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown"
+              <a class="nav-link dropdown-toggle color-nav-link" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">Browse</a>
               <ul class="dropdown-menu">
                 <li><a href="#" class="dropdown-item">All</a></li>
@@ -59,7 +59,7 @@
             </div>
             </form>
             <li class="nav-item ms-lg-auto">
-              <a class="nav-link" href="#">Sign Up</a>
+              <a class="nav-link color-nav-link" href="resources/pages/signup.html">Sign Up</a>
             </li>
             <li class="nav-item pe-2 nav-x-padding">
               <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#log-in-modal" role="button">Log
