--- a/Final/index.html
+++ b/Final/index.html
@@ -14,13 +14,13 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter&family=Open+Sans&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="resources/stylesheets/style.css">
   <!-- Bootstrap JavaScript Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"
     defer></script>
   <!-- custom js -->
-  <script src="index.js" defer></script>
+  <script src="resources/scripts/index.js" defer></script>
   <title>Rensselaer List</title>
 </head>
 
@@ -30,7 +30,7 @@
     <!-- Site Nav Bar -->
     <nav class="navbar navbar-expand-lg navbar-light">
       <!-- Site logo -->
-      <a href="index.html" class="navbar-brand"><img class="RL-Logo" src="resources/Rensselear-List-Logo.png"
+      <a href="index.html" class="navbar-brand"><img class="RL-Logo" src="resources/images/Rensselear-List-Logo.png"
           alt="Rensselaer List Logo"></a>
       <!-- Nav button for mobile  -->
       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#RL-Navbar"
