--- a/Final/resources/pages/signup.html
+++ b/Final/resources/pages/signup.html
@@ -26,7 +26,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter&family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../../style.css" />
+    <link rel="stylesheet" href="../stylesheets/style.css" />
     <!-- Bootstrap JavaScript Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
@@ -34,6 +34,7 @@
       crossorigin="anonymous"
       defer
     ></script>
+    <script src="../scripts/index.js" defer></script>
     <!-- custom js -->
     <title>Rensselaer List</title>
   </head>
@@ -47,7 +48,7 @@
         <a href="../../index.html" class="navbar-brand"
           ><img
             class="RL-Logo"
-            src="../Rensselear-List-Logo.png"
+            src="../images/Rensselear-List-Logo.png"
             alt="Rensselaer List Logo"
         /></a>
         <!-- Nav button for mobile  -->
@@ -185,7 +186,7 @@
                   </div>
                   <div class="col d-flex align-items-center">
                     <img
-                      src="../sign-up-image.jpg"
+                      src="../images/sign-up-image.jpg"
                       class="img-fluid"
                       alt="Transaction Image"
                     />
