--- a/Final/product-page.html
+++ b/Final/product-page.html
@@ -42,7 +42,7 @@
                 </div>
                 <div class="offcanvas-body">
                     <ul class="navbar-nav flex-fill justify-content-between pt-2">
-                        <li class="nav-item dropdown nav-x-padding">
+                        <li class="nav-item dropdown ps-3">
                             <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">Browse</a>
                             <ul class="dropdown-menu">
@@ -63,13 +63,13 @@
                         <li class="nav-item ms-lg-auto">
                             <a class="nav-link" href="#">Sign Up</a>
                         </li>
-                        <li class="nav-item pe-2 nav-x-padding">
+                        <li class="nav-item pe-2 ">
                             <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#log-in-modal"
                                 role="button">Log
                                 In</a>
                         </li>
                         <li class="nav-item black-line"></li>
-                        <li class="nav-item nav-x-padding">
+                        <li class="nav-item ps-3">
                             <a class="btn btn-primary nav-btn" href="#" role="button">Sell</a>
                         </li>
                     </ul>
@@ -79,6 +79,7 @@
     </header>
     <!-- product details section -->
     <section class="container-xxl py-5">
+        <h2 class="sec-head-1 pb-3">Spongebob Chair</h2>
         <div class="row">
             <div class="col-md">
                 <img src="https://secure.img1-cg.wfcdn.com/im/16817007/c_crop-h680-w680%5Ecompr-r85/1127/112745653/default_name.jpg"
@@ -98,7 +99,17 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md">
+            <div class="col-md ms-5">
+                <h3 class="sec-head-1 pb-1">Listed Price</h3>
+                <h2 class="sec-head-2"><b>$200</b></h2>
+                <div class="row pt-4">
+                    <div class="col">
+                        <button class="btn btn-success product-btn">Buy Now</button>
+                    </div>
+                    <div class="col d-flex justify-content-start">
+                        <button class="btn btn-secondary product-btn">Make Offer</button>
+                    </div>
+                </div>
 
             </div>
         </div>
